WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29032
[Qt] locale date displays incorrect date format in symbian
https://bugs.webkit.org/show_bug.cgi?id=29032
Summary
[Qt] locale date displays incorrect date format in symbian
Pat
Reported
2009-09-08 07:37:59 PDT
Using the javascript code below displays incorrectly in symbian: var d = new Date(); document.write("toLocaleDateString: " + d.toLocaleDateString()); Should display: toLocaleDateString: Tuesday, September 8, 2009 Actual display #x A fix would follow shortly.
Attachments
Patch
(1.21 KB, patch)
2009-09-08 07:43 PDT
,
Pat
eric
: review-
Details
Formatted Diff
Diff
updated patch
(1.39 KB, patch)
2009-09-08 12:04 PDT
,
Pat
ariya.hidayat
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pat
Comment 1
2009-09-08 07:43:50 PDT
Created
attachment 39185
[details]
Patch
Tor Arne Vestbø
Comment 2
2009-09-08 07:57:55 PDT
Please use the keyword 'Qt' for bugs related to QtWebKit.
Eric Seidel (no email)
Comment 3
2009-09-08 09:26:36 PDT
Comment on
attachment 39185
[details]
Patch Is this covered by an existing layout test? If so, please update the ChangeLog to say so. Otherwise we need to write a new test. Also, it seems we should update the comment: // strftime() we are using does not support # To say something like: // strftime() does not support '#' on WinCE or Symbian.
Pat
Comment 4
2009-09-08 12:04:44 PDT
Created
attachment 39201
[details]
updated patch Updated the comment to reflect that strftime() does not support '#' on both WinCE and Symbian. We are not able to run layout tests on Symbian yet, so layout tests are not affected.
Eric Seidel (no email)
Comment 5
2009-09-08 16:46:03 PDT
Comment on
attachment 39201
[details]
updated patch Rejecting patch 39201 from commit-queue.
yael.aharon@nokia.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py
.
Yael
Comment 6
2009-09-08 16:49:03 PDT
(In reply to
comment #5
)
> (From update of
attachment 39201
[details]
) > Rejecting patch 39201 from commit-queue. > >
yael.aharon@nokia.com
does not have committer permissions according to >
http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py
.
Eric, I added myself today to
http://trac.webkit.org/browser/trunk/WebKitTools/Scripts/modules/committers.py
. I hope you don't mind to set the flag back :-)
Eric Seidel (no email)
Comment 7
2009-09-09 03:18:21 PDT
Comment on
attachment 39201
[details]
updated patch Rejecting patch 39201 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Yael
Comment 8
2009-09-09 06:26:55 PDT
Landed in 48205
Eric Seidel (no email)
Comment 9
2009-09-09 09:36:17 PDT
storage/database-lock-after-reload.html -> failed Possibly just a flakey test?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug