[Qt] locale date displays incorrect date format in symbian. https://bugs.webkit.org/show_bug.cgi?id=29032

Patch by Pat Bradley <vincent.bradley@nokia.com> on 2009-09-08
Reviewed by Ariya Hidayat.

strftime() in Symbian does not support #
Layout tests cannot be run on Symbian yet, so they are not updated.

* runtime/DatePrototype.cpp:


Canonical link: https://commits.webkit.org/39774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48205 268f45cc-cd09-0410-ab3c-d52691b4dbfc